# hybrid_UP

./: .gitignore  README.md  Wigner_d.m  getu.m
matrix Fisher/: pdf_MF_sampling_gpu.m
propagation/: pendulum_continuous.m  pendulum_continuous_MC.m  pendulum_hybrid.m  pendulum_hybrid_MC.m
propagation/mex/: fftSO3R_mex.mexa64  getColor_mex.mexa64  getFcL_mex.mexa64  getLambda_mex.mexa64  getOmega_mex.mexa64  propagate_continuous_mex.mexa64  propagate_discrete_mex.mexa64
propagation/mex/continuous/: CMakeLists.txt  fftSO3R.cu  fftSO3R.cuh  setup.cuh
propagation/mex/discrete/: CMakeLists.txt
propagation/mex/discrete/include/: getFcL.cuh  getIndRule.cuh  getOmega.cuh
propagation/mex/discrete/src/: getFcL.cu  getOmega.cu  mexIndRule.cpp  mexPropagate.cpp
propagation/mex/fftSO3R/: CMakeLists.txt  kernel.cu  setup.cu  setup.cuh
propagation/mex/getColor/: CMakeLists.txt
propagation/mex/getColor/include/: getc.hpp  setup.hpp
propagation/mex/getColor/src/: getc.cpp  mexFunction.cpp  setup.cpp
propagation/mex/propagate_continuous/: CMakeLists.txt  integrate.cu  integrate.cuh  kernel.cu  setup.cu
propagation/mex/propagate_discrete/: CMakeLists.txt
propagation/mex/propagate_discrete/include/: getLambda.cuh  propagate.cuh  setup.hpp
propagation/mex/propagate_discrete/src/: getIndRule.cu  getLambda.cu  mexFcL.cpp  mexLambda.cpp  mexOmega.cpp  propagate.cu  setup.cpp
propagation/plotting/: myarrow.m  pendulum_plot.m  plot_Omega.m  plot_continuous.m  plot_hybrid.m
